change tmux prefix and rebind resize keys

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,8 @@
+unbind C-b
+set -g prefix C-a
+# bind 'C-a C-a' to type 'C-a'
+bind C-a send-prefix
+
 set -g default-shell /usr/local/bin/fish
 
 # set -g default-terminal "xterm-24bit"
@@ -58,10 +63,10 @@ unbind-key Up
 bind-key t choose-tree
 
 # resize panes
-bind-key -r s resize-pane -D 5
-bind-key -r w resize-pane -U 5
-bind-key -r a resize-pane -L 5
-bind-key -r d resize-pane -R 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r H resize-pane -L 5
+bind-key -r L resize-pane -R 5
 
 # Vim style pane selection
 bind h select-pane -L
