move dotiles to home directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-.git
-nvim/.netrwhist
-.DS_Store
-nvim/autoload/*
-!nvim/autoload/custom.vim
+*
+
+!.config/alacritty/alacritty.yml
+!.config/fish/config.fish
+!.config/nvim/init.nvim
+!.config/nvim/autoload/custom.vim
+!.gitconfig
+!.gitignore
+!.gitignore_global
+!.rgignore
+!.skhdrc
+!.terminfo
+!.tigrc
+!.tmux.conf
+!.yabairc
+!setup.sh
+!xterm-24bit.terminfo
+
