--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,8 @@
 	ff = only
 [push]
 	default = current
+[includeIf "gitdir:~/**/.git"]
+	path = ~/projects/config.personal
 [includeIf "gitdir:~/projects/**/.git"]
 	path = ~/projects/config.personal
 [includeIf "gitdir:~/Workspace/**/.git"]
