fix issues related to moving of dotfiles

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,34 @@
-*
+/*
 
-!.config/alacritty/alacritty.yml
-!.config/fish/config.fish
-!.config/nvim/init.nvim
-!.config/nvim/coc-settings.json
-!.config/nvim/UltiSnips/javascript.snippets
-!.config/nvim/colors/night-owl.vim
-!.config/nvim/autoload/custom.vim
-!.gitconfig
 !.gitignore
+!/.config
+
+.config/*
+
+!.config/alacritty
+
+!.config/fish
+.config/fish/*
+!.config/fish/config.fish
+!.config/fish/fishfile
+
+!.config/nvim
+.config/nvim/*
+!.config/nvim/init.vim
+!.config/nvim/coc-settings.json
+
+!.config/nvim/UltiSnips
+!.config/nvim/colors
+
+!.config/nvim/autoload
+.config/nvim/autoload/*
+!.config/nvim/autoload/custom.vim
+
+!.config/karabiner
+.config/karabiner/*
+!.config/karabiner/karabiner.json
+
+!.gitconfig
 !.gitignore_global
 !.rgignore
 !.skhdrc
