--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 unbind C-b
-set -g prefix C-a
+set -g prefix C-s
 # bind 'C-a C-a' to type 'C-a'
-bind C-a send-prefix
+bind C-s send-prefix
 
 set -g default-shell /usr/local/bin/fish
 
