--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 .config/fish/*
 !.config/fish/config.fish
 !.config/fish/fishfile
+!.config/fish/functions
+.config/fish/functions/*
+!.config/fish/functions/fish_user_key_bindings.fish
 
 !.config/nvim
 .config/nvim/*
