better bindings for quitting vifm, newsboat, w3m

--- a/.newsboat/config
+++ b/.newsboat/config
@@ -58,6 +58,7 @@ bind-key g home
 bind-key d pagedown
 bind-key u pageup
 bind-key l open
+bind-key ENTER open
 bind-key h quit
 bind-key a toggle-article-read
 bind-key n next-unread
