--- a/.newsboat/config
+++ b/.newsboat/config
@@ -73,3 +73,7 @@ browser "w3m %u"
 macro c set browser "open -g -a 'Google Chrome' %u"; open-in-browser ; set browser "w3m %u"
 macro m set browser "mpv %u"; open-in-browser ; set browser "w3m %u"
 
+macro b set browser "open -g -a 'Google Chrome' %u"
+macro p set browser "mpv %u"
+macro r set browser "w3m %u"
+
