configure coc-explorer
hide the annoying popup in coc-explorer and show hidden files by
default

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -34,5 +34,7 @@
   "python.jediEnabled": false,
   "emmet.showExpandedAbbreviation": "always",
   "emmet.includeLanguages": { "javascript": "javascriptreact" },
-  "snippets.ultisnips.directories": ["UltiSnips"]
+  "snippets.ultisnips.directories": ["UltiSnips"],
+  "explorer.file.showHiddenFiles": true,
+  "explorer.previewAction.onHover": false
 }
