add formatting for html files

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -20,6 +20,7 @@
   "coc.preferences.formatOnSaveFiletypes": [
     "css",
     "graphql",
+    "html",
     "javascript",
     "javascriptreact",
     "json",
