fix nvim issue, update tmux prefix
M-t is a better prefix on the new keyboard for tmux. Since moving to
abbr from alias in fish, vim is not aliased to nvim anymore. This broke
many other abbr which depended on vim alias. Add fix for this.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,8 @@
 unbind C-b
-set -g prefix C-s
+set -g prefix M-t
 # bind 'C-a C-a' to type 'C-a'
-bind C-s send-prefix
+bind M-t send-prefix
+
 
 set -g default-shell /usr/local/bin/fish
 
