--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,7 +51,7 @@ setw -g pane-base-index 1
 
 # split window
 bind-key \\ split-window -h -c '#{pane_current_path}'
-bind-key | split-window -v -c '#{pane_current_path}'
+bind-key - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
