--- a/.tigrc
+++ b/.tigrc
@@ -250,6 +250,7 @@ bind status r @git checkout %(file)
 # stash
 bind status tt ?>git stash
 bind status tT @git stash push -m "%(prompt Enter stash name: )"
+bind status ts ?>git stash -p
 
 # quick commit
 bind status c !git commit
