--- a/.tigrc
+++ b/.tigrc
@@ -271,8 +271,8 @@ bind stash p ?>git stash pop %(stash)
 #====================
 # stage view
 #====================
-bind stage <C-n>  :/^@@
-bind stage <C-p>  :?^@@
+bind stage <C-j>  :/^@@
+bind stage <C-k>  :?^@@
 bind stage s status-update
 bind stage r status-revert
 
@@ -285,8 +285,8 @@ bind log <C-K> :?^commit
 #====================
 # diff view
 #====================
-bind diff <C-n> :/^@@
-bind diff <C-p> :?^@@
+bind diff <C-j> :/^@@
+bind diff <C-k> :?^@@
 
 bind diff m >tig -- %(file)
 bind diff u @git checkout %(commit)^ -- %(file)
