configure cocnvim to keep spaces around braces

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -36,5 +36,6 @@
   "emmet.includeLanguages": { "javascript": "javascriptreact" },
   "snippets.ultisnips.directories": ["UltiSnips"],
   "explorer.file.showHiddenFiles": true,
-  "explorer.previewAction.onHover": false
+  "explorer.previewAction.onHover": false,
+  "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true
 }
