change tmux next and previous window keybindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,6 +60,9 @@ unbind-key Right
 unbind-key Down
 unbind-key Up
 
+bind-key -r Left previous-window
+bind-key -r Right next-window
+
 # show tree and allow to switch to a specific pane
 bind-key t choose-tree
 
@@ -80,8 +83,6 @@ bind-key ! send-keys "clear" \; send-keys "Enter"
 
 # use tab to switch between pane
 bind-key -r o select-pane -t :.+
-bind-key -r n next-window
-bind-key -r p previous-window
 
 # move window
 bind-key -r < swap-window -t -1\; select-window -t -1
