--- a/.skhdrc
+++ b/.skhdrc
@@ -52,17 +52,20 @@ ctrl + shift - n  : yabai -m space --create && \
 ctrl + shift  - x : yabai -m space --destroy
 
 # fast focus desktop
-ctrl - 0 : yabai -m space --focus recent
-ctrl - 1 : yabai -m space --focus 1
-ctrl - 2 : yabai -m space --focus 2
-ctrl - 3 : yabai -m space --focus 3
-ctrl - 4 : yabai -m space --focus 4
-ctrl - 5 : yabai -m space --focus 5
-ctrl - 6 : yabai -m space --focus 6
-ctrl - 7 : yabai -m space --focus 7
-ctrl - 8 : yabai -m space --focus 8
-ctrl - 9 : yabai -m space --focus 9
+alt - 1 : yabai -m space --focus 1
+alt - 2 : yabai -m space --focus 2
+alt - 3 : yabai -m space --focus 3
+alt - 4 : yabai -m space --focus 4
+alt - 5 : yabai -m space --focus 5
+alt - 6 : yabai -m space --focus 6
+alt - 7 : yabai -m space --focus 7
+alt - 8 : yabai -m space --focus 8
+alt - 9 : yabai -m space --focus 9
+alt - 0 : yabai -m space --focus 10
 
+ctrl + cmd - r : yabai -m space --focus recent
+ctrl + cmd - n : yabai -m space --focus next
+ctrl + cmd - p : yabai -m space --focus prev
 
 shift + alt - 1 : yabai -m window --space 1; yabai -m space --focus 1
 shift + alt - 2 : yabai -m window --space 2; yabai -m space --focus 2
@@ -89,21 +92,6 @@ cmd + ctrl  - f : yabai -m window --toggle native-fullscreen
 cmd + alt - a : yabai -m space --layout bsp
 cmd + alt - d : yabai -m space --layout float
 
-# apps
-shift + cmd + ctrl - a : open -a /Applications/Spotify.app
-shift + cmd + ctrl - b : open -a /Applications/Google Chrome.app
-shift + cmd + ctrl - c : open -a /Applications/Slack.app
-# shift + cmd + ctrl - d : open -a /System/Applications/Calendar.app
-shift + cmd + ctrl - f : open -a /System/Library/CoreServices/Finder.app
-shift + cmd + ctrl - n : open -a /Applications/Standard Notes.app
-shift + cmd + ctrl - s : open -a /Applications/Safari.app
-shift + cmd + ctrl - t : open -a /Applications/Alacritty.app
-shift + cmd + ctrl - v : open -a /Applications/Visual\ Studio\ Code.app
-
-# '=' char
-# lungo
-cmd + ctrl - 0x18 : open -g 'lungo:toggle'
-
 # '\' char
 :: passthrough
 cmd + ctrl - 0x2A ; passthrough
@@ -117,6 +105,3 @@ cmd + ctrl - 0x27 : launchctl kickstart -k "gui/${UID}/homebrew.mxcl.yabai"
 # toggle border
 cmd + ctrl - 0x2C : yabai -m space --toggle padding; yabai -m space --toggle gap
 
-# fn + n
-# open system calculator
-# fn - n : open /System/Applications/Calculator.app
