--- a/.skhdrc
+++ b/.skhdrc
@@ -3,24 +3,24 @@
 # alt - w : chunkc tiling::window --close
 
 ################## FOCUS WINDOW START ################################################
-cmd + ctrl - h : yabai -m window --focus west
-cmd + ctrl - j : yabai -m window --focus south
-cmd + ctrl - k : yabai -m window --focus north
-cmd + ctrl - l : yabai -m window --focus east
+alt + ctrl - h : yabai -m window --focus west
+alt + ctrl - j : yabai -m window --focus south
+alt + ctrl - k : yabai -m window --focus north
+alt + ctrl - l : yabai -m window --focus east
 ################# FOCUS WINDOW END ###################################################
 
 ################## WINDOW START ###################################################
 # swap window
-shift + alt - h : yabai -m window --swap west
-shift + alt - j : yabai -m window --swap south
-shift + alt - k : yabai -m window --swap north
-shift + alt - l : yabai -m window --swap east
+ctrl + alt - left  : yabai -m window --swap west
+ctrl + alt - down  : yabai -m window --swap south
+ctrl + alt - up    : yabai -m window --swap north
+ctrl + alt - right : yabai -m window --swap east
 
 # move window
-shift + cmd - h : yabai -m window --warp west
-shift + cmd - j : yabai -m window --warp south
-shift + cmd - k : yabai -m window --warp north
-shift + cmd - l : yabai -m window --warp east
+ctrl + alt + shift - left  : yabai -m window --warp west
+ctrl + alt + shift - down  : yabai -m window --warp south
+ctrl + alt + shift - up    : yabai -m window --warp north
+ctrl + alt + shift - right : yabai -m window --warp east
 ################## WINDOW END ###################################################
 
 # increase region size
@@ -34,6 +34,18 @@ ctrl + alt + shift - a : yabai -m window --resize left:20:0
 ctrl + alt + shift - s : yabai -m window --resize bottom:0:-20
 ctrl + alt + shift - w : yabai -m window --resize top:0:20
 ctrl + alt + shift - d : yabai -m window --resize right:-20:0
+
+# equalize size of windows
+ctrl + alt - r : yabai -m space --balance
+
+# # toggle window fullscreen
+alt - f : yabai -m window --toggle zoom-fullscreen
+
+# # toggle window fullscreen
+alt - r : yabai -m space --rotate 90
+
+# # toggle window native fullscreen
+cmd + ctrl  - f : yabai -m window --toggle native-fullscreen
 
 ################## DESKTOP START ###############################################
 # create desktop, move window and follow focus
@@ -75,32 +87,20 @@ shift + alt - 9 : yabai -m window --space 9; yabai -m space --focus 9
 
 ################## DESKTOP END ###############################################
 
-# equalize size of windows
-shift + alt - 0 : yabai -m space --balance
-
-# # toggle window fullscreen
-alt - f : yabai -m window --toggle zoom-fullscreen
-
-# # toggle window fullscreen
-alt - r : yabai -m space --rotate 90
-
-# # toggle window native fullscreen
-cmd + ctrl  - f : yabai -m window --toggle native-fullscreen
-
-# change layout of desktop
-cmd + alt - a : yabai -m space --layout bsp
-cmd + alt - d : yabai -m space --layout float
+# # change layout of desktop
+# cmd + alt - a : yabai -m space --layout bsp
+# cmd + alt - d : yabai -m space --layout float
 
 # '\' char
 :: passthrough
-cmd + ctrl - 0x2A ; passthrough
+alt + ctrl - 0x2A ; passthrough
 passthrough < cmd + ctrl - 0x2A ; default
 
 # '"' char
-# reload yabai
-cmd + ctrl - 0x27 : launchctl kickstart -k "gui/${UID}/homebrew.mxcl.yabai"
+# # reload yabai
+# cmd + ctrl - 0x27 : launchctl kickstart -k "gui/${UID}/homebrew.mxcl.yabai"
 
 # '?' char
-# toggle border
-cmd + ctrl - 0x2C : yabai -m space --toggle padding; yabai -m space --toggle gap
+# # toggle border
+# cmd + ctrl - 0x2C : yabai -m space --toggle padding; yabai -m space --toggle gap
 
