--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,8 @@ set-option -g renumber-windows on
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 
+set-option -g focus-events on
+
 #set -g default-terminal screen-256color
 set -g status-keys vi
 set -g history-limit 50000
