--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -277,7 +277,7 @@ key_bindings:
   - { key: E,          mods: Alt,                 chars: "\x1be"         }
   - { key: F,          mods: Alt,                 chars: "\x1bf"         }
   - { key: G,          mods: Alt,                 chars: "\x1bg"         }
-  - { key: H,          mods: Alt,                 chars: "\x1b7"         }
+  - { key: H,          mods: Alt,                 chars: "\x1bh"         }
   - { key: I,          mods: Alt,                 chars: "\x1bi"         }
   - { key: J,          mods: Alt,                 chars: "\x1bj"         }
   - { key: K,          mods: Alt,                 chars: "\x1bk"         }
