--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -33,7 +33,7 @@ scrolling:
 # Font configuration
 font:
   normal:
-    family: MonoLisa
+    family: MonoLisa Nerd Font
     style: Regular
 
   bold:
