[nvim] do not auto select first value in cocnvim

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,6 +1,6 @@
 {
   "codeLens.enable": false,
-  "suggest.noselect": false,
+  "suggest.noselect": true,
   "suggest.enablePreview": true,
   "suggest.enablePreselect": true,
   "diagnostic.messageTarget": "float",
@@ -32,8 +32,8 @@
   "elixirLS.dialyzerEnabled": true,
   "elixirLS.mixEnv": "dev",
   "python.jediEnabled": false,
-  "emmet.showExpandedAbbreviation": "always",
-  "emmet.includeLanguages": { "javascript": "javascriptreact" },
+  /* "emmet.showExpandedAbbreviation": "always", */
+  /* "emmet.includeLanguages": { "javascript": "javascriptreact" }, */
   "snippets.ultisnips.directories": ["UltiSnips"],
   "explorer.file.showHiddenFiles": true,
   "explorer.previewAction.onHover": false,
