--- a/.tigrc
+++ b/.tigrc
@@ -310,21 +310,21 @@ bind refs bD ?git branch -D %(branch)
 # push
 bind main pp ?git push %(remote) %(branch)
 bind main pF ?git push --force %(remote) %(branch)
-bind main pu !git pull
-bind main pU ?git pull --rebase
+bind main fm !git pull
+bind main fM ?git pull --rebase
 
 bind refs pp ?git push %(remote) %(branch)
 bind refs pF ?git push --force %(remote) %(branch)
-bind refs pu !git pull
-bind refs pU ?git pull --rebase
+bind refs fm !git pull
+bind refs fM ?git pull --rebase
 
 bind refs	c	?git checkout %(branch)
 
 bind status bc ?git checkout -b "%(prompt Checkout at new branch: )" %(commit)
 bind status pp ?git push %(remote) %(branch)
 bind status pF ?git push --force %(remote) %(branch)
-bind status pu !git pull
-bind status pU ?git pull --rebase
+bind status fm !git pull
+bind status fM ?git pull --rebase
 
 # reset/rebase/revert
 bind main uu ?git reset --soft HEAD~1
