--- a/.tigrc
+++ b/.tigrc
@@ -75,7 +75,7 @@ set main-view = \
 set blame-view	= id:yes,color file-name:auto author:full date:default line-number:yes,interval=1 text
 set grep-view	= file-name:no line-number:yes,interval=1 text
 set reflog-view	= line-number:no,interval=5 id:yes date:no author:no commit-title:yes,refs,overflow=no
-set refs-view	= line-number:no,interval=1 id:no date:default author:full ref commit-title
+set refs-view	= line-number:no,interval=1 id:no date:default author:full ref
 set stash-view	= line-number:no,interval=1 id:no date:default author:full commit-title
 set status-view	= line-number:no,interval=1 status:short file-name
 set tree-view	= line-number:no,interval=1 mode author:full file-size date:default id:no file-name
