--- a/.tigrc
+++ b/.tigrc
@@ -90,7 +90,7 @@ set diff-view	= line-number:no,interval=5 text:yes,commit-title-overflow=no
 # UI display settings
 set show-changes		= yes		# Show changes commits in the main view?
 set show-untracked		= yes		# Show also untracked changes?
-set wrap-lines			= yes		# Wrap long lines in pager views?
+set wrap-lines			= no		# Wrap long lines in pager views?
 set tab-size			= 2		# Number of spaces to use when expanding tabs
 set line-graphics		= default	# Enum: ascii, default, utf-8
 set truncation-delimiter	= ~		# Character drawn for truncations, or "utf-8"
