--- a/.gitconfig
+++ b/.gitconfig
@@ -21,6 +21,8 @@
 	path = ~/projects/config.personal
 [includeIf "gitdir:~/work/**/.git"]
 	path = ~/work/config.work
+[url "git@github-1bharat:1bharat"]
+  insteadOf = git@github.com:1bharat
 [commit]
 	template = ~/.git_commit_msg.txt
 [init]
