--- a/.gitconfig
+++ b/.gitconfig
@@ -21,7 +21,9 @@
 	path = ~/projects/config.personal
 [includeIf "gitdir:~/work/**/.git"]
 	path = ~/work/config.work
-[url "git@me.github.com:1bharat"]
+[url "git@work.github.com"]
+  insteadOf = git@github.com:AfterpayTouch
+[url "git@me.github.com"]
   insteadOf = git@github.com:1bharat
 [commit]
 	template = ~/.gitmessage
