[alacritty] update font to nerd fonts

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -37,15 +37,15 @@ font:
     style: Regular
 
   bold:
-    family: MonoLisa
+    family: MonoLisa Nerd Font
     style: Bold
 
   italic:
-    family: MonoLisa
+    family: MonoLisa Nerd Font
     style: Regular Italic
 
   bold_italic:
-    family: MonoLisa
+    family: MonoLisa Nerd Font
     style: Bold Italic
 
   size: 13.0
