--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -63,59 +63,40 @@ font:
 draw_bold_text_with_bright_colors: true
 
 # Colors (Tomorrow Night Bright)
+# TokyoNight Alacritty Colors
 colors:
   # Default colors
   primary:
-      background: '0x011627'
-      foreground: '0xd6deeb'
+    background: '0x1a1b26'
+    foreground: '0xc0caf5'
 
-    #dim_foreground: '#9a9a9a'
-    #bright_foreground: '#ffffff'
-
-  cursor:
-    text: '0x000000'
-    cursor: '0x8cd1ff'
-
-  # Vi mode cursor colors
-  #
-  # Colors for the cursor when the vimode is active. If these are unset, the
-  # cursor color will be the inverse of the cell color.
-  #vi_mode_cursor:
-  #  text: '#000000'
-  #  cursor: '#ffffff'
-
-  # Selection colors
-  #
-  # Colors which should be used to draw the selection area. If selection
-  # background is unset, selection color will be the inverse of the cell colors.
-  # If only text is unset the cell text color will remain the same.
-  #selection:
-  #  text: '#eaeaea'
-  #  background: '#404040'
-
-# Normal colors
+  # Normal colors
   normal:
-    black:   '#000000'
-    red:     '#ff5874'
-    green:   '#addb67'
-    yellow:  '#ecc48d'
-    blue:    '#82aaff'
-    magenta: '#c792ea'
-    cyan:    '#7fdbca'
-    white:   '#d6deeb'
+    black:   '0x15161E'
+    red:     '0xf7768e'
+    green:   '0x9ece6a'
+    yellow:  '0xe0af68'
+    blue:    '0x7aa2f7'
+    magenta: '0xbb9af7'
+    cyan:    '0x7dcfff'
+    white:   '0xa9b1d6'
 
   # Bright colors
   bright:
-    black:   '#575656'
-    red:     '#ff5874'
-    green:   '#addb67'
-    yellow:  '#ecc48d'
-    blue:    '#82aaff'
-    magenta: '#c792ea'
-    cyan:    '#7fdbca'
-    white:   '#d6deeb'
+    black:   '0x414868'
+    red:     '0xf7768e'
+    green:   '0x9ece6a'
+    yellow:  '0xe0af68'
+    blue:    '0x7aa2f7'
+    magenta: '0xbb9af7'
+    cyan:    '0x7dcfff'
+    white:   '0xc0caf5'
 
-  # Dim colors
+  indexed_colors:
+    - { index: 16, color: '0xff9e64' }
+    - { index: 17, color: '0xdb4b4b' }
+    
+    # Dim colors
   #
   # If the dim colors are not set, they will be calculated automatically based
   # on the `normal` colors.
