--- a/.tmux.conf
+++ b/.tmux.conf
@@ -136,45 +136,73 @@ set -g status-left-length 120
 ##+--- Bars ---+
 
 
-background='#011627'
-inactiveBackground='#000c1d'
-foreground='#d6deeb'
-cursor='#7e57c2'
+# background='#011627'
+# inactiveBackground='#000c1d'
+# foreground='#d6deeb'
+# cursor='#7e57c2'
 
-# normal
-color0='#011627'
-color1='#ef5350'
-color2='#22da6e'
-color3='#addb67'
-color4='#82aaff'
-color5='#c792ea'
-color6='#21c7a8'
-color7='#ffffff'
+# # normal
+# color0='#011627'
+# color1='#ef5350'
+# color2='#22da6e'
+# color3='#addb67'
+# color4='#82aaff'
+# color5='#c792ea'
+# color6='#21c7a8'
+# color7='#ffffff'
 
-# bright
-color8='#575656'
-color9='#ef5350'
-color10='#22da6e'
-color11='#ffeb95'
-color12='#82aaff'
-color13='#c792ea'
-color14='#7fdbca'
-color15='#ffffff'
-color16='#1a2b4a'
+# # bright
+# color8='#575656'
+# color9='#ef5350'
+# color10='#22da6e'
+# color11='#ffeb95'
+# color12='#82aaff'
+# color13='#c792ea'
+# color14='#7fdbca'
+# color15='#ffffff'
+# color16='#1a2b4a'
 
-set -g status-left "#[bg=${color16},fg=${color4},bold] #S "
-set -g status-style "bg=${color16}","fg=${color5},bold"
-set -g pane-border-style "fg=${color4}"
-set -g pane-active-border-style "fg=${color6}"
-set -g mode-style "fg=${color0}","bg=${color4}"
-set -g window-status-format "#I:#W"
-set -g window-status-separator '  '
-set -g window-status-style "bg=${color16}","fg=${color5},bold"
-set -g window-status-current-style "fg=${color16},bold","bg=${color4}"
-set -g message-style "bg=${color4}","fg=${color0}"
-set -g message-command-style "bg=${color2}","fg=${color0}"
-set -g status-right "#{prefix_highlight} #[fg=${color2},bold]%l:%M %p "
+# set -g status-left "#[bg=${color16},fg=${color4},bold] #S "
+# set -g status-style "bg=${color16}","fg=${color5},bold"
+# set -g pane-border-style "fg=${color4}"
+# set -g pane-active-border-style "fg=${color6}"
+# set -g mode-style "fg=${color0}","bg=${color4}"
+# set -g window-status-format "#I:#W"
+# set -g window-status-separator '  '
+# set -g window-status-style "bg=${color16}","fg=${color5},bold"
+# set -g window-status-current-style "fg=${color16},bold","bg=${color4}"
+# set -g message-style "bg=${color4}","fg=${color0}"
+# set -g message-command-style "bg=${color2}","fg=${color0}"
+# set -g status-right "#{prefix_highlight} #[fg=${color2},bold]%l:%M %p "
 
+set -g mode-style "fg=#7aa2f7,bg=#3b4261"
+
+set -g message-style "fg=#7aa2f7,bg=#3b4261"
+set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+
+set -g pane-border-style "fg=#3b4261"
+set -g pane-active-border-style "fg=#7aa2f7"
+
+set -g status "on"
+set -g status-justify "left"
+
+set -g status-style "fg=#7aa2f7,bg=#1f2335"
+
+set -g status-left-length "100"
+set -g status-right-length "100"
+
+set -g status-left-style NONE
+set -g status-right-style NONE
+
+set -g status-left "#[fg=#15161E,bg=#7aa2f7,bold] #S #[fg=#7aa2f7,bg=#1f2335,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#1f2335] #{prefix_highlight} #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261] %Y-%m-%d  %I:%M %p #[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#7aa2f7,bold] #h "
+
+setw -g window-status-activity-style "underscore,fg=#a9b1d6,bg=#1f2335"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=#a9b1d6,bg=#1f2335"
+setw -g window-status-format "#[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1f2335,bg=#1f2335,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#1f2335,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I  #W #F #[fg=#3b4261,bg=#1f2335,nobold,nounderscore,noitalics]"
+  
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
