--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -70,6 +70,9 @@ colors:
     background: '0x1a1b26'
     foreground: '0xc0caf5'
 
+  cursor:
+    background: '0xa9b1d6'
+
   # Normal colors
   normal:
     black:   '0x15161E'
