[vim] better binding for easymotion-s

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -112,4 +112,4 @@ nmap f <Plug>(easymotion-f)
 nmap F <Plug>(easymotion-F)
 nmap t <Plug>(easymotion-t)
 nmap T <Plug>(easymotion-T)
-nmap <Leader>sa <Plug>(easymotion-s)
+nmap <Leader>sh <Plug>(easymotion-s)
