[tmux] add tmux resurrect package

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -155,6 +155,7 @@ setw -g window-status-current-format "#[fg=#7aa2f7,bg=#3b4261,bold] #I/#W #F "
 
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_copy_mode_attr "fg=${color0},bg=${color6},bold"
