--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -21,6 +21,8 @@
 	path = ~/projects/config.personal
 [includeIf "gitdir:~/work/**/.git"]
 	path = ~/work/config.work
+[url "git@me.github.com"]
+  insteadOf = git@github.com:zenobht
 [url "git@work.github.com"]
   insteadOf = git@github.com:AfterpayTouch
 [commit]
