--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -21,9 +21,9 @@
 	path = ~/projects/config.personal
 [includeIf "gitdir:~/work/**/.git"]
 	path = ~/work/config.work
-[url "git@me.github.com"]
+[url "git@me.github.com:zenobht"]
   insteadOf = git@github.com:zenobht
-[url "git@work.github.com"]
+[url "git@work.github.com:AfterpayTouch"]
   insteadOf = git@github.com:AfterpayTouch
 [commit]
 	template = ~/.gitmessage
