terminal: configure kitty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,7 +11,7 @@ set -g default-shell /usr/local/bin/fish
 # set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",alacritty:Tc"
+set -ga terminal-overrides ",xterm-kitty:Tc"
 # set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # reload config file (change file location to your the tmux.conf you want to use)
