--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -966,7 +966,7 @@ dynamic_background_opacity yes
 #: to yes means that any background processes still using the terminal
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
-# allow_remote_control no
+allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
@@ -980,7 +980,7 @@ dynamic_background_opacity yes
 #: from controlling kitty. Reloading the config will not affect this
 #: setting.
 
-# listen_on none
+listen_on unix:/tmp/mykitty
 
 #: Tell kitty to listen to the specified unix/tcp socket for remote
 #: control connections. Note that this will apply to all kitty
@@ -995,7 +995,7 @@ dynamic_background_opacity yes
 #: details. Changing this option by reloading the config is not
 #: supported.
 
-# env 
+# env
 
 #: Specify environment variables to set in all child processes. Note
 #: that environment variables are expanded recursively, so if you
