--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1115,7 +1115,7 @@ macos_option_as_alt yes
 #: resizable on macOS. Changing this setting by reloading the config
 #: will only affect newly created windows.
 
-# macos_thicken_font 0
+macos_thicken_font 0.75
 
 #: Draw an extra border around the font with the given width, to
 #: increase legibility at small font sizes. For example, a value of
