kitty: add new keybindings to replicate some functionality of tmux

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -174,13 +174,13 @@ disable_ligatures all cursor
 #: with the background color of the cell underneath instead, use the
 #: special keyword: background
 
-# cursor_shape block
+cursor_shape block
 
 #: The cursor shape can be one of (block, beam, underline). Note that
 #: when reloading the config this will be changed only if the cursor
 #: shape has not been set by the program running in the terminal.
 
-# cursor_beam_thickness 1.5
+cursor_beam_thickness 2.5
 
 #: Defines the thickness of the beam cursor (in pts)
 
@@ -337,7 +337,7 @@ disable_ligatures all cursor
 #: Set the active window to the window under the mouse when moving the
 #: mouse around
 
-# pointer_shape_when_grabbed arrow
+pointer_shape_when_grabbed arrow
 
 #: The shape of the mouse pointer when the program running in the
 #: terminal grabs the mouse. Valid values are: arrow, beam and hand
@@ -347,7 +347,7 @@ disable_ligatures all cursor
 #: The default shape of the mouse pointer. Valid values are: arrow,
 #: beam and hand
 
-# pointer_shape_when_dragging beam
+pointer_shape_when_dragging hand
 
 #: The default shape of the mouse pointer when dragging across text.
 #: Valid values are: arrow, beam and hand
@@ -1219,7 +1219,7 @@ macos_thicken_font 0.75
 #: shortcuts, you can change it in your kitty.conf to change the
 #: modifiers for all the default shortcuts.
 
-# clear_all_shortcuts no
+clear_all_shortcuts yes
 
 #: You can have kitty remove all shortcut definition seen up to this
 #: point. Useful, for instance, to remove the default shortcuts.
@@ -1544,3 +1544,22 @@ macos_thicken_font 0.75
 #: }}}
 
 #: }}}
+#
+map alt+t>t new_tab
+map alt+t>q close_tab
+map alt+t>1 goto_tab  1
+map alt+t>2 goto_tab  2
+map alt+t>3 goto_tab  3
+map alt+t>4 goto_tab  4
+map alt+t>5 goto_tab  5
+map alt+t>6 goto_tab  6
+map alt+t>7 goto_tab  7
+map alt+t>8 goto_tab  8
+map alt+t>9 goto_tab  9
+map alt+t>n next_tab
+map alt+t>enter new_window
+map alt+t>w close_window
+map alt+d next_window
+map alt+t>r start_resizing_window
+map alt+t>l next_layout
+map cmd+c copy_to_clipboard
