kitty: add paste and reload kitty binding

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1561,5 +1561,8 @@ map alt+t>enter new_window
 map alt+t>w close_window
 map alt+d next_window
 map alt+t>r start_resizing_window
+map alt+t>R load_config_file
 map alt+t>l next_layout
 map cmd+c copy_to_clipboard
+map cmd+v paste_from_clipboard
+
