kitty: fix kitty not showing git status in fish prompt

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -936,6 +936,8 @@ dynamic_background_opacity yes
 
 #: Advanced {{{
 
+shell_integration no-rc
+
 # shell .
 
 #: The shell program to execute. The default value of . means to use
@@ -956,7 +958,7 @@ dynamic_background_opacity yes
 #: kitty will cycle through various known editors (``vim``, ``emacs``,
 #: etc) and take the first one that exists on your system.
 
-# close_on_child_death no
+close_on_child_death yes
 
 #: Close the window when the child process (shell) exits. If no (the
 #: default), the terminal will remain open when the child exits as
