--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1558,12 +1558,13 @@ map alt+t>6 goto_tab  6
 map alt+t>7 goto_tab  7
 map alt+t>8 goto_tab  8
 map alt+t>9 goto_tab  9
-map alt+t>n next_tab
+map alt+d next_tab
+map alt+a previous_tab
 map alt+t>enter new_window
 map alt+t>w close_window
-map alt+d next_window
+map alt+s next_window
 map alt+t>r start_resizing_window
-map alt+t>R load_config_file
+map alt+t>r load_config_file
 map alt+t>l next_layout
 map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
