kitty: update kitty keymaps

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1549,22 +1549,13 @@ clear_all_shortcuts yes
 #
 map alt+t>t new_tab
 map alt+t>q close_tab
-map alt+t>1 goto_tab  1
-map alt+t>2 goto_tab  2
-map alt+t>3 goto_tab  3
-map alt+t>4 goto_tab  4
-map alt+t>5 goto_tab  5
-map alt+t>6 goto_tab  6
-map alt+t>7 goto_tab  7
-map alt+t>8 goto_tab  8
-map alt+t>9 goto_tab  9
-map alt+d next_tab
-map alt+a previous_tab
+map alt+right next_tab
+map alt+left previous_tab
 map alt+t>enter new_window
 map alt+t>w close_window
-map alt+s next_window
+map alt+p next_window
 map alt+t>r start_resizing_window
-map alt+t>r load_config_file
+map alt+t>- load_config_file
 map alt+t>l next_layout
 map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
