--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -204,7 +204,7 @@ cursor_beam_thickness 2.5
 
 #: Scrollback {{{
 
-# scrollback_lines 2000
+scrollback_lines 5000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -225,7 +225,7 @@ cursor_beam_thickness 2.5
 #: should be at the top of the screen. Similarly CURSOR_LINE and
 #: CURSOR_COLUMN will be replaced by the current cursor position.
 
-# scrollback_pager_history_size 0
+# scrollback_pager_history_size 25
 
 #: Separate scrollback history size, used only for browsing the
 #: scrollback buffer (in MB). This separate buffer is not available
@@ -1559,4 +1559,11 @@ map alt+t>- load_config_file
 map alt+t>l next_layout
 map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
+
+map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /usr/local/bin/fzf --no-sort --no-mouse --exact -i --tac
+
+scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
+# scrollback_pager /usr/local/bin/nvim  -c "set nonumber nolist showtabline=0 foldcolumn=0" -c "autocmd TermOpen * normal G" -c "silent write /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
+
+map alt+t>s show_scrollback
 
