--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1547,16 +1547,16 @@ clear_all_shortcuts yes
 
 #: }}}
 #
-map alt+t>t new_tab
-map alt+t>q close_tab
-map alt+right next_tab
-map alt+left previous_tab
-map alt+t>enter new_window
-map alt+t>w close_window
-map alt+p next_window
-map alt+t>r start_resizing_window
-map alt+t>- load_config_file
-map alt+t>l next_layout
+map cmd+k>t new_tab
+map cmd+k>q close_tab
+map cmd+right next_tab
+map cmd+left previous_tab
+map cmd+k>enter new_window
+map cmd+k>w close_window
+map cmd+p next_window
+map cmd+k>r start_resizing_window
+map cmd+k>- load_config_file
+map cmd+k>l next_layout
 map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
 
@@ -1565,5 +1565,5 @@ map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /usr/local/bin
 scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 # scrollback_pager /usr/local/bin/nvim  -c "set nonumber nolist showtabline=0 foldcolumn=0" -c "autocmd TermOpen * normal G" -c "silent write /tmp/kitty_scrollback_buffer | te cat /tmp/kitty_scrollback_buffer - "
 
-map alt+t>s show_scrollback
+map cmd+k>s show_scrollback
 
