nvim: update term used in tmux and neovim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,13 +6,7 @@ bind M-t send-prefix
 
 set -g default-shell /usr/local/bin/fish
 
-# set -g default-terminal "xterm-24bit"
-# set -ga terminal-overrides ',alacritty:RGB'
-# set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
-
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-kitty:Tc"
-# set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
+set -g default-terminal "xterm-kitty"
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
