--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -795,8 +795,8 @@ color15 #c0caf5
 # extended colors
 color16 #ff9e64
 color17 #db4b4b
-  
-background_opacity 0.95
+
+# background_opacity 0.95
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
