tmux: move all keybindings at the end

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,59 +45,6 @@ set -g display-panes-time 2000
 set -g base-index 1
 setw -g pane-base-index 1
 
-# split window
-bind-key \\ split-window -h -c '#{pane_current_path}'
-bind-key - split-window -v -c '#{pane_current_path}'
-unbind '"'
-unbind %
-
-unbind-key Left
-unbind-key Right
-unbind-key Down
-unbind-key Up
-
-bind-key -r Left previous-window
-bind-key -r Right next-window
-
-# show tree and allow to switch to a specific pane
-bind-key t choose-tree
-
-# resize panes
-bind-key -r J resize-pane -D 5
-bind-key -r K resize-pane -U 5
-bind-key -r H resize-pane -L 5
-bind-key -r L resize-pane -R 5
-
-# Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# clear pane
-bind-key ! send-keys "clear" \; send-keys "Enter"
-
-# use tab to switch between pane
-bind-key -r o select-pane -t :.+
-
-# move window
-bind-key -r < swap-window -t -1\; select-window -t -1
-bind-key -r > swap-window -t +1\; select-window -t +1
-
-# balance panes
-bind = select-layout even-vertical
-bind + select-layout even-horizontal
-
-# new window
-bind C new
-
-# kill commands
-bind V kill-window
-bind v kill-pane
-bind Q confirm-before kill-server
-
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-
 # visual notification of activity in other windows
 setw -g monitor-activity on
 set -g visual-activity on
@@ -159,3 +106,58 @@ set -g @prefix_highlight_output_prefix '< '
 set -g @prefix_highlight_output_suffix ' >'
 run '~/.tmux/plugins/tpm/tpm'
 
+
+# Key bindings -----------------------------
+
+# split window
+bind-key \\ split-window -h -c '#{pane_current_path}'
+bind-key - split-window -v -c '#{pane_current_path}'
+unbind '"'
+unbind %
+
+unbind-key Left
+unbind-key Right
+unbind-key Down
+unbind-key Up
+
+bind-key -r Left previous-window
+bind-key -r Right next-window
+
+# show tree and allow to switch to a specific pane
+bind-key t choose-tree
+
+# resize panes
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r H resize-pane -L 5
+bind-key -r L resize-pane -R 5
+
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# clear pane
+bind-key ! send-keys "clear" \; send-keys "Enter"
+
+# use tab to switch between pane
+bind-key -r o select-pane -t :.+
+
+# move window
+bind-key -r < swap-window -t -1\; select-window -t -1
+bind-key -r > swap-window -t +1\; select-window -t +1
+
+# balance panes
+bind = select-layout even-vertical
+bind + select-layout even-horizontal
+
+# new window
+bind C new
+
+# kill commands
+bind V kill-window
+bind v kill-pane
+bind Q confirm-before kill-server
+
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
