--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,8 +3,7 @@ set -g prefix M-t
 # bind 'C-a C-a' to type 'C-a'
 bind M-t send-prefix
 
-
-set -g default-shell /usr/local/bin/fish
+set -g default-shell /opt/homebrew/bin/fish
 
 set -g default-terminal "xterm-kitty"
 
