--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1570,3 +1570,5 @@ map cmd+plus change_font_size all +2.0
 map cmd+minus change_font_size all -2.0
 map cmd+0 change_font_size all 0
 
+map ctrl+shift+j send_text normal \x1b[74;5u
+
