--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1571,4 +1571,5 @@ map cmd+minus change_font_size all -2.0
 map cmd+0 change_font_size all 0
 
 map ctrl+shift+j send_text normal \x1b[74;5u
+map ctrl+shift+k send_text normal \x1b[75;5u
 
