zellij: update status line colors for zellij

--- a/zellij/.config/zellij/config.yaml
+++ b/zellij/.config/zellij/config.yaml
@@ -207,9 +207,9 @@ themes:
   tokyo-night:
     fg: [169,177,214] #A9B1D6
     bg: [26,27,38] #1A1B26
-    black: [56,62,90] #383E5A
+    black: [22,22,30] #16161e
     red: [249,51,87] #F9334D
-    green: [158,206,106]  #9ECE6A
+    green: [65,166,181]  #41A6B5
     yellow: [224,175,104] #E0AF68
     blue: [122,162,247]  #7AA2F7
     magenta: [187,154,247] #BB9AF7
