--- a/zellij/.config/zellij/config.yaml
+++ b/zellij/.config/zellij/config.yaml
@@ -207,45 +207,57 @@ copy_clipboard: system
 # Enable or disable automatic copy (and clear) of selection when releasing mouse
 copy_on_select: true
 
+theme: catppuccin
 themes:
-  tokyo-night:
-    fg: [169,177,214] #A9B1D6
-    bg: [26,27,38] #1A1B26
-    black: [22,22,30] #16161e
-    red: [249,51,87] #F9334D
-    green: [65,166,181]  #41A6B5
-    yellow: [224,175,104] #E0AF68
-    blue: [122,162,247]  #7AA2F7
-    magenta: [187,154,247] #BB9AF7
-    cyan: [42,195,222] #2AC3DE
-    white: [192,202,245] #C0CAF5
-    orange: [255,158,100] #FF9E64
-  tokyo-night-storm:
-    fg: [169,177,214] #A9B1D6
-    bg: [36,40,59] #24283B
-    black: [56,62,90] #383E5A
-    red: [249,51,87] #F9334D
-    green: [158,206,106]  #9ECE6A
-    yellow: [224,175,104] #E0AF68
-    blue: [122,162,247]  #7AA2F7
-    magenta: [187,154,247] #BB9AF7
-    cyan: [42,195,222] #2AC3DE
-    white: [192,202,245] #C0CAF5
-    orange: [255,158,100] #FF9E64
-  tokyo-night-light:
-    fg: [52,59,88] #343B58
-    bg: [213,214,219] #D5D6DB
-    black: [15,15,20] #0F0F14
-    red: [186,75,96] #BA4B60
-    green: [72,94,48]  #485E30
-    yellow: [143,94,21] #8F5E15
-    blue: [52,84,138]  #34548A
-    magenta: [90,74,120] #5A4A78
-    cyan: [15,75,110] #0F4B6E
-    white: [130,137,172] #8289AC
-    orange: [150,80,39] #965027
-
-theme: tokyo-night
+  catppuccin:
+    bg:
+    - 48
+    - 45
+    - 65
+    black:
+    - 22
+    - 19
+    - 32
+    blue:
+    - 150
+    - 205
+    - 251
+    cyan:
+    - 26
+    - 24
+    - 38
+    fg:
+    - 217
+    - 224
+    - 238
+    gray:
+    - 87
+    - 82
+    - 104
+    green:
+    - 171
+    - 233
+    - 179
+    magenta:
+    - 245
+    - 194
+    - 231
+    orange:
+    - 248
+    - 189
+    - 150
+    red:
+    - 242
+    - 143
+    - 173
+    white:
+    - 217
+    - 224
+    - 238
+    yellow:
+    - 250
+    - 227
+    - 176
 
 ui:
   pane_frames:
