--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -517,7 +517,7 @@ remember_window_size  no
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+enabled_layouts tall:bias=50;full_size=1;mirrored=false
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -1594,14 +1594,16 @@ map cmd+k>t new_tab
 map cmd+k>q close_tab
 map cmd+right next_tab
 map cmd+left previous_tab
-map cmd+k>enter new_window
-map cmd+k>w close_window
-map cmd+p next_window
+map cmd+k>w new_window
+map cmd+k>x close_window
+map cmd+p previous_window
+map cmd+n next_window
 map cmd+k>r start_resizing_window
 map cmd+k>- load_config_file
 map cmd+k>l next_layout
 map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
+map cmd+shift+n new_os_window
 
 map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /usr/local/bin/fzf --no-sort --no-mouse --exact -i --tac
 
