kitty: update kitty bindings

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1599,11 +1599,13 @@ map cmd+k>x close_window
 map cmd+p previous_window
 map cmd+n next_window
 map cmd+k>r start_resizing_window
-map cmd+k>- load_config_file
+map cmd+k>z load_config_file
 map cmd+k>l next_layout
 map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
 map cmd+shift+n new_os_window
+map ctrl+minus resize_window narrower
+map ctrl+plus resize_window wider
 
 map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /usr/local/bin/fzf --no-sort --no-mouse --exact -i --tac
 
