--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1590,22 +1590,37 @@ clear_all_shortcuts yes
 
 #: }}}
 #
+#: tab ------------------------------------------------------------------------
 map cmd+k>t new_tab
+map cmd+k>c set_tab_title
 map cmd+k>q close_tab
 map cmd+right next_tab
 map cmd+left previous_tab
+map cmd+1 goto_tab 1
+map cmd+2 goto_tab 2
+map cmd+3 goto_tab 3
+map cmd+4 goto_tab 4
+map cmd+5 goto_tab 5
+map cmd+6 goto_tab 6
+map cmd+7 goto_tab 7
+map cmd+8 goto_tab 8
+map cmd+9 goto_tab 9
+
+#: window ---------------------------------------------------------------------
 map cmd+k>w new_window
 map cmd+k>x close_window
 map cmd+p previous_window
 map cmd+n next_window
 map cmd+k>r start_resizing_window
-map cmd+k>z load_config_file
-map cmd+k>l next_layout
-map cmd+c copy_to_clipboard
-map cmd+v paste_from_clipboard
 map cmd+shift+n new_os_window
 map ctrl+minus resize_window narrower
 map ctrl+plus resize_window wider
+map cmd+k>l next_layout
+
+#: others ----------------------------------------------------------------------
+map cmd+k>z load_config_file
+map cmd+c copy_to_clipboard
+map cmd+v paste_from_clipboard
 
 map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /usr/local/bin/fzf --no-sort --no-mouse --exact -i --tac
 
