kitty: use cmd as leader key

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1591,9 +1591,9 @@ clear_all_shortcuts yes
 #: }}}
 #
 #: tab ------------------------------------------------------------------------
-map cmd+k>t new_tab
-map cmd+k>c set_tab_title
-map cmd+k>q close_tab
+map cmd+t>t new_tab
+map cmd+t>c set_tab_title
+map cmd+t>x close_tab
 map cmd+right next_tab
 map cmd+left previous_tab
 map cmd+1 goto_tab 1
@@ -1607,18 +1607,18 @@ map cmd+8 goto_tab 8
 map cmd+9 goto_tab 9
 
 #: window ---------------------------------------------------------------------
-map cmd+k>w new_window
-map cmd+k>x close_window
+map cmd+w>w new_window
+map cmd+w>x close_window
+map cmd+w>l next_layout
+map cmd+w>r start_resizing_window
+map cmd+w>o new_os_window
 map cmd+p previous_window
 map cmd+n next_window
-map cmd+k>r start_resizing_window
-map cmd+shift+n new_os_window
 map ctrl+minus resize_window narrower
 map ctrl+plus resize_window wider
-map cmd+k>l next_layout
 
 #: others ----------------------------------------------------------------------
-map cmd+k>z load_config_file
+map cmd+k>r load_config_file
 map cmd+c copy_to_clipboard
 map cmd+v paste_from_clipboard
 
